--- a/application/views/scripts/emalhe/tableespcaptura.phtml
+++ b/application/views/scripts/emalhe/tableespcaptura.phtml
@@ -18,7 +18,7 @@
                 <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
                 <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
                 <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['em_id'] ?>, '<?= $this->url(array("controller" => "emalhe", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_em_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['em_id'] ?>, '<?= $this->url(array("controller" => "emalhe", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_em_id'] ?>, 'especie')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
