--- a/application/views/scripts/grosseira/tablepesqueiro.phtml
+++ b/application/views/scripts/grosseira/tablepesqueiro.phtml
@@ -13,7 +13,7 @@
                 <td name="inputIdEntrevista"> <?= $vGrosseira['grs_id'] ?> </td>
                 <td name="inputPesqueiro" > <?= $vGrosseira['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vGrosseira['t_tempoapesqueiro'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletepesqueiro"), null, true) ?>', <?= $vGrosseira['grs_paf_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletepesqueiro"), null, true) ?>', <?= $vGrosseira['grs_paf_id'] ?>, 'pesqueiro')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
