--- a/application/views/scripts/linha/tableespcaptura.phtml
+++ b/application/views/scripts/linha/tableespcaptura.phtml
@@ -17,7 +17,7 @@
                 <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
                 <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
                 <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_lin_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_lin_id'] ?>, 'especie')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
