--- a/application/views/scripts/linha/tablepesqueiro.phtml
+++ b/application/views/scripts/linha/tablepesqueiro.phtml
@@ -13,7 +13,7 @@
                 <td name="inputIdEntrevista"> <?= $vLinha['lin_id'] ?> </td>
                 <td name="inputPesqueiro" > <?= $vLinha['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vLinha['t_tempoapesqueiro'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletepesqueiro"), null, true) ?>', <?= $vLinha['lin_paf_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletepesqueiro"), null, true) ?>', <?= $vLinha['lin_paf_id'] ?>, 'pesqueiro')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
