--- a/application/views/scripts/siripoia/tableespcaptura.phtml
+++ b/application/views/scripts/siripoia/tableespcaptura.phtml
@@ -17,7 +17,7 @@
                 <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] . ' Unidades' ?> </td>
                 <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] . ' kg' ?> </td>
                 <td name="inputPreco"> <?= 'R$ ' . $vEspecieCapturada['spc_preco'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_sir_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_sir_id'] ?>, 'especie')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
