--- a/application/views/scripts/siripoia/tablepesqueiro.phtml
+++ b/application/views/scripts/siripoia/tablepesqueiro.phtml
@@ -15,7 +15,7 @@
                 <td name="inputPesqueiro" > <?= $vSiripoia['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vSiripoia['t_tempoapesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vSiripoia['t_distapesqueiro'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deletepesqueiro"), null, true) ?>', <?= $vSiripoia['sir_paf_id'] ?>)"></td>
+                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deletepesqueiro"), null, true) ?>', <?= $vSiripoia['sir_paf_id'] ?>, 'pesqueiro')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
