--- a/application/views/scripts/vara-pesca/tableespcaptura.phtml
+++ b/application/views/scripts/vara-pesca/tableespcaptura.phtml
@@ -18,7 +18,7 @@
                 <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] . ' kg' ?> </td>
                 <td name="inputPreco"> <?= 'R$ ' . $vEspecieCapturada['spc_preco'] ?> </td>
                 <td><input type="button" class="button-del" width="5%" 
-                           onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['vp_id'] ?>, '<?= $this->url(array("controller" => "vara-pesca", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_vp_id'] ?>)"></td>
+                           onclick="ajax_delete_entrevista_has(<?= $this->entrevista['vp_id'] ?>, '<?= $this->url(array("controller" => "vara-pesca", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_vp_id'] ?>, 'especie')"></td>
                 </tr>
             <?php endforeach; ?>
         </table>
