--- a/application/views/scripts/estatistica/pescador.phtml
+++ b/application/views/scripts/estatistica/pescador.phtml
@@ -14,36 +14,36 @@
         responsive:false
     };
  
- 
+        var azulClaro = "rgba(89,130,149,.8)";
+        var azulEscuro = "rgba(38,60,91,1)";
+        var azul = "rgba(0,0,255,1)";
+        var vermelhoClaro = "rgba(217,86,104,.8)";
+        var vermelhoEscuro = "rgba(144,36,36,1)";
+        var vermelho = "rgba(255,0,0,1)";
+        var verde = "rgba(0,180,0,1)";
+        var verdeClaro = "rgba(153,222,157,1)";
+        var verdeEscuro = "rgba(32,94,36,1)";
+        var marromRachy = "rgba(95,48,43,.8)";
+        var marromEscuroRachy = "rgba(68,37,33,1)";
+        var laranja = "rgba(255,122,4,.5)";
+        var laranjaEscuro = "rgba(255,122,12,1);";
+        var azulCeleste = "rgba(102,113,199,1)";
+        var azulCelesteClaro = "rgba(102,113,199,1)";
     var generoPescadores = [
        {
         value: <?= $this->Masculino ?>,
-        color:"#F7464A",
+        color: azul,
         highlight: "#FF5A5E",
         label: "Masculino"
        },
        {
         value: <?= $this->Feminino ?>,
-        color:"#F7464A",
+        color:vermelhoClaro,
         highlight: "#FF5A5E",
         label: "Feminino"
        }
    ];
-   var azulClaro = "rgba(89,130,149,.8)";
-   var azulEscuro = "rgba(38,60,91,1)";
-   var azul = "rgba(0,0,255,1)";
-   var vermelhoClaro = "rgba(217,86,104,.8)";
-   var vermelhoEscuro = "rgba(144,36,36,1)";
-   var vermelho = "rgba(255,0,0,1)";
-   var verde = "rgba(0,180,0,1)";
-   var verdeClaro = "rgba(153,222,157,1)";
-   var verdeEscuro = "rgba(32,94,36,1)";
-   var marromRachy = "rgba(95,48,43,.8)";
-   var marromEscuroRachy = "rgba(68,37,33,1)";
-   var laranja = "rgba(255,122,4,.5)";
-   var laranjaEscuro = "rgba(255,122,12,1);"
-   var azulCeleste = "rgba(102,113,199,1)";
-   var azulCelesteClaro = "rgba(102,113,199,1)";
+   
    
    
    var pescadoresByPortoArrasto = {
